# Cuoio-Cane-web

./: .gitignore  AI_CONTEXT_BACKEND.txt  AI_CONTEXT_FRONTEND.txt  AI_CONTEXT_STAFF_REPORTS.txt
apps/admin/: DESIGN_RULES.md  package-lock.json  package.json  tailwind.config.ts
apps/admin/src/: middleware.ts
apps/admin/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/admin/src/components/: OfflineSyncProvider.tsx  Providers.tsx
apps/admin/src/contexts/: StaffAliasContext.tsx
apps/admin/src/hooks/: useNetworkStatus.ts  useOfflineMutation.ts
apps/admin/src/lib/: react-query.ts
apps/admin/src/styles/: globals.css
apps/admin/supabase/migrations/: 20260116_create_discounts.sql  20260116_create_order_events.sql  20260116_increment_usage.sql  20260116_orders_coupon.sql
apps/api/: package-lock.json  package.json  tsc_output.txt
apps/api/src/: app.module.ts  env.validation.ts  main.ts
apps/api/src/supabase/: supabase.module.ts
apps/api/test/: verification.e2e-spec.ts
apps/desktop/: ARCHITECTURE_AND_DECISIONS.md  dev-full.bat  dev.bat  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  (+3 more)
supabase/migrations/: 20260113000000_initial_schema.sql  20260113000001_security_and_triggers.sql  20260113000002_storage_buckets.sql  20260113000003_stock_rpc.sql  20260117000000_add_operative_fields_to_profiles.sql
(+127 files in other folders)
