[package]
name = "cuoiocane-desktop"
version = "0.0.0"
description = "Cuoio Cane Desktop App"
authors = ["Cuoio Cane"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
